src/test/deca/syntax/invalid/resultats/test12_float-lex.res
'{': [@0,333:333='{',<36>,15:0]
'print': [@1,336:340='print',<17>,16:1]
'(': [@2,341:341='(',<34>,16:6]
INT: [@3,342:342='4',<1>,16:7]
'.': [@4,343:343='.',<32>,16:8]
')': [@5,344:344=')',<35>,16:9]
';': [@6,345:345=';',<39>,16:10]
'}': [@7,347:347='}',<37>,17:0]
